// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Snapshots tests should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-1-menu"
        class="component"
        role="combobox"
        tabindex="-1"
      >
        <div
          class="component"
        >
          <div
            class="component s block hasRightAddons"
          >
            <div
              aria-controls="downshift-1-menu"
              aria-labelledby="downshift-1-label"
              class="field inner"
              id="downshift-0-input"
              tabindex="0"
            >
              <div
                class="inputWrapper"
              >
                <div
                  class="input"
                >
                  <div
                    class="contentWrapper"
                  />
                </div>
              </div>
              <div
                class="addons rightAddons"
              >
                <span
                  class="arrow arrow"
                />
              </div>
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      alfa-portal-container=""
    />
  </body>,
  "container": <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-1-menu"
      class="component"
      role="combobox"
      tabindex="-1"
    >
      <div
        class="component"
      >
        <div
          class="component s block hasRightAddons"
        >
          <div
            aria-controls="downshift-1-menu"
            aria-labelledby="downshift-1-label"
            class="field inner"
            id="downshift-0-input"
            tabindex="0"
          >
            <div
              class="inputWrapper"
            >
              <div
                class="input"
              >
                <div
                  class="contentWrapper"
                />
              </div>
            </div>
            <div
              class="addons rightAddons"
            >
              <span
                class="arrow arrow"
              />
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select Snapshots tests should match snapshot with fatal error 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="downshift-3-menu"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <div
      class="component"
    >
      <div
        class="component s block hasRightAddons"
      >
        <div
          aria-controls="downshift-3-menu"
          aria-labelledby="downshift-3-label"
          class="field inner hasError"
          id="downshift-2-input"
          tabindex="0"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div
                class="contentWrapper"
              />
            </div>
          </div>
          <div
            class="addons rightAddons"
          >
            <span
              class="arrow arrow"
            />
          </div>
        </div>
        <span
          class="sub error"
        >
          Error
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots tests should match snapshot with visibleOptions 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="downshift-5-menu"
    class="component"
    role="combobox"
    tabindex="-1"
  >
    <div
      class="component"
    >
      <div
        class="component s block hasRightAddons"
      >
        <div
          aria-controls="downshift-5-menu"
          aria-labelledby="downshift-5-label"
          class="field inner focused"
          id="downshift-4-input"
          tabindex="0"
        >
          <div
            class="inputWrapper"
          >
            <div
              class="input"
            >
              <div
                class="contentWrapper"
              />
            </div>
          </div>
          <div
            class="addons rightAddons"
          >
            <span
              class="arrow arrow open"
            />
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
